<resources>
    <string name="app_name">NewsBlender</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Привіт пустий фрагмент</string>
    <string name="email">Пошта</string>
    <string name="sign_in">Вхід</string>
    <string name="password">Пароль</string>
    <string name="register_hint">Створити акаунт</string>
    <string name="forgot_password">Забули пароль?</string>
    <string name="full_name">Повне Ім\'я</string>
    <string name="sign_up">Зареєструватись</string>
    <string name="sign_up_login_hint">Вже зареєстровані? Увійти</string>
    <string name="all_news">Всі новини</string>
    <string name="nav_open">Відкрити</string>
    <string name="nav_close">Закрити</string>
    <!-- Preference Titles -->
    <string name="messages_header">Повідомлення</string>
    <string name="sync_header">Синхронізація</string>

    <!-- Messages Preferences -->
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Налаштування</string>
    <string name="user_menu">Меню користувача</string>
    <string name="incognito">Інкогніто</string>
    <string name="vinnutsia">Вінницька</string>
    <string name="volyn">Волинська</string>
    <string name="dnipropetrovsk">Дніпропетровська</string>
    <string name="transcarpathian">Закарпатська</string>
    <string name="zaporizhzhia">Запорізька</string>
    <string name="ivano_frankivsk">Івано-Франківська</string>
    <string name="kyiv">Київська</string>
    <string name="kirovohrad">Кіровоградська</string>
    <string name="lviv">Львівська</string>
    <string name="mykolayiv">Миколаївська</string>
    <string name="odesa">Одеська</string>
    <string name="rivne">Рівненська</string>
    <string name="ternopil">Тернопільська</string>
    <string name="kharkiv">Харківська</string>
    <string name="kherson">Херсонська</string>
    <string name="khmelnytsky">Хмельницька</string>
    <string name="cherkasy">Черкаська</string>
    <string name="chernihiv">Чернігівська</string>
    <string name="chernivtsi">Чернівецька</string>
    <string name="zhytomyr">Житомирська</string>
    <string name="poltava">Полтавська</string>
    <string name="luhansk">Луганська</string>
    <string name="donetsk">Донецька</string>
    <string name="sumy">Сумська</string>
    <string name="user_profile">Інформація про користувача</string>
    <string name="news_resources">Новинні ресурси</string>
    <string name="saved">Збережені</string>
    <string name="settings_profile">Налаштування профіля</string>
    <string name="application_settings">Налаштування додатку</string>
    <string name="sign_out_incognito">Вихід з Incognito</string>
    <string name="userProfileTitleTextView">Інформація про користувача</string>
    <string name="registerDateTextView">Дата реєстрації:</string>
    <string name="userLoginTextView">Логін користувача:</string>
    <string name="userInboxTextView">Поштова скринька:</string>
    <string name="okButton">ОК</string>
    <string name="exitButton">Вихід</string>
    <string name="preferences_theme">Тема</string>
    <string name="font_size">Розмір шрифта</string>
    <string name="font">Шрифт</string>
    <string name="language">Мова</string>
    <string name="news_count">Кількість новин для зберігання</string>
    <string name="share_news">Поділитись новиною</string>
    <string name="save">Зберегти</string>
    <string name="fullname">Повне ім\'я</string>
    <string name="inbox">Поштова скринька</string>
    <string name="cancel">Скасувати</string>
    <string name="add">Додати</string>
    <string name="add_your_news_resource">Додай свій новинний ресур прямо зараз</string>
    <string name="add_telegram_link">Посилання на телеграм канал</string>
    <string name="success">Успіх!</string>
    <string name="uk" translatable="false">uk</string>
    <string name="small">Малий</string>
    <string name="medium">Середній</string>
    <string name="large">Великий</string>
    <string name="light">Світла</string>
    <string name="dark">Темна</string>

    <string name="vinnutsia_chkbx" translatable="false">Vinnitska</string>
    <string name="volyn_chkbx" translatable="false">Volynska</string>
    <string name="dnipropetrovsk_chkbx" translatable="false">Dnipropetrovska</string>
    <string name="transcarpathian_chkbx" translatable="false">Zakarpatska</string>
    <string name="zaporizhzhia_chkbx" translatable="false">Zaporizhska</string>
    <string name="ivano_frankivsk_chkbx" translatable="false">Ivano-Frankivska</string>
    <string name="kyiv_chkbx" translatable="false">Kyivska</string>
    <string name="kirovohrad_chkbx" translatable="false">Kirovohradska</string>
    <string name="lviv_chkbx" translatable="false">Lvivska</string>
    <string name="mykolayiv_chkbx" translatable="false">Mykolaivska</string>
    <string name="odesa_chkbx" translatable="false">Odeska</string>
    <string name="rivne_chkbx" translatable="false">Rivenska</string>
    <string name="ternopil_chkbx" translatable="false">Ternopilska</string>
    <string name="kharkiv_chkbx" translatable="false">Kharkivska</string>
    <string name="kherson_chkbx" translatable="false">Khersonska</string>
    <string name="khmelnytsky_chkbx" translatable="false">Khmelnystska</string>
    <string name="cherkasy_chkbx" translatable="false">Cherkaska</string>
    <string name="chernihiv_chkbx" translatable="false">Chernihivska</string>
    <string name="chernivtsi_chkbx" translatable="false">Chernivetska</string>
    <string name="zhytomyr_chkbx" translatable="false">Zhytomyrska</string>
    <string name="poltava_chkbx" translatable="false">Poltavska</string>
    <string name="luhansk_chkbx" translatable="false">Luhanska</string>
    <string name="donetsk_chkbx" translatable="false">Donetska</string>
    <string name="sumy_chkbx" translatable="false">Sumska</string>
    <string name="delete">Видалити</string>
    <string name="are_you_sure">Ви впевнені?</string>
    <string name="yes">Так</string>
    <string name="no">Ні</string>
    <string name="deleting">Видалення!</string>
    <string name="changing">Зміна!</string>

</resources>