<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
            app:key="font_size"
            app:title="@string/font_size"
            app:entries="@array/font_size_values"
            app:entryValues="@array/font_size_values"
            app:defaultValue=""
            app:icon="@drawable/ic_font_size"
            app:useSimpleSummaryProvider="true" />
    <ListPreference
            app:key="font"
            app:title="@string/font"
            app:icon="@drawable/ic_font"
            app:entries="@array/font_values"
            app:entryValues="@array/font_values"
            app:defaultValue="Inter"
            app:useSimpleSummaryProvider="true" />
    <ListPreference
            app:key="theme"
            app:title="@string/preferences_theme"
            app:icon="@drawable/ic_theme"
            app:entries="@array/theme_values"
            app:entryValues="@array/theme_values"
            app:defaultValue="Світла"
            app:useSimpleSummaryProvider="true" />

    <ListPreference
            app:key="language"
            app:title="@string/language"
            app:icon="@drawable/ic_language"
            app:entries="@array/language"
            app:entryValues="@array/language"
            app:defaultValue="Українська"
            app:useSimpleSummaryProvider="true" />

    <ListPreference
            app:key="news_count"
            app:title="@string/news_count"
            app:entries="@array/news_count"
            app:icon="@drawable/ic_news_count"
            app:entryValues="@array/news_count"
            app:defaultValue="5"
            app:useSimpleSummaryProvider="true" />

</PreferenceScreen>